FIX handout page clipping

--- a/umibukela/static/stylesheets/print-materials.scss
+++ b/umibukela/static/stylesheets/print-materials.scss
@@ -588,7 +588,7 @@ $headings-color: $black;
   }
 
   .right {
-    padding: 0px 0px 0px 15px !important;
+    padding: 0px 2px 0px 13px !important;
   }
 
   &.page-1 {
